fixed images on smaller screens

--- a/frontend/src/components/SiteLogo.module.css
+++ b/frontend/src/components/SiteLogo.module.css
@@ -20,61 +20,12 @@
   flex-shrink: 0;
   min-height: 24px;
 }
-.jobTittleKeyword {
-  width: 100%;
-  border: 0;
-  outline: 0;
-  font-family: var(--button-button);
-  font-size: var(--button-button-size);
-  background-color: transparent;
-  height: 24px;
-  position: relative;
-  line-height: 24px;
-  color: var(--gray-400);
-  text-align: left;
-  display: inline-block;
-}
-.inputField {
-  flex: 1;
-  border-radius: var(--br-8xs);
-  background-color: var(--gray-scale-white);
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: flex-start;
-  padding: var(--padding-base) var(--padding-lg);
-  box-sizing: border-box;
-  gap: var(--gap-xs);
-  min-width: 180px;
-}
 
 
-.primary {
-  position: relative;
-  font-size: var(--button-button-size);
-  line-height: 24px;
-  text-transform: capitalize;
-  font-weight: 600;
-  font-family: var(--button-button);
-  color: var(--gray-scale-white);
-  text-align: left;
-}
-.button {
-  cursor: pointer;
-  border: 0;
-  padding: var(--padding-base) var(--padding-9xl) var(--padding-base)
-    var(--padding-13xl);
-  background-color: var(--primary-500);
-  border-radius: var(--br-9xs);
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: center;
-  white-space: nowrap;
-}
-.button:hover {
-  background-color: var(--color-dodgerblue);
-}
+
+
+
+
 .container,
 .headerSection,
 .search {
@@ -105,15 +56,13 @@
 }
 .headerSection {
   flex: 1;
-  padding: var(--padding-4xs) 0 0;
   box-sizing: border-box;
   min-width: 441px;
 }
 .illustrationIcon {
   width: 492px;
-  position: relative;
+  position: right;
   max-height: 100%;
-  overflow: hidden;
   flex-shrink: 0;
   max-width: 100%;
 }
@@ -126,19 +75,29 @@
   justify-content: center;
   padding: var(--padding-81xl) var(--padding-281xl);
   box-sizing: border-box;
-  gap: var(--gap-130xl);
+  gap: var(--gap-10xl);
   max-width: 100%;
   text-align: left;
   font-size: var(--display-01-size);
   color: var(--gray-900);
   font-family: var(--button-button);
 }
-@media screen and (max-width: 1600px) {
-  .illustrationIcon {
-    flex: 1;
+
+@media screen and (max-width: 1720px) {
+
+  .siteLogo {
+    padding-left: var(--padding-131xl);
+    padding-right: var(--padding-131xl);
   }
+
+}
+@media screen and (max-width: 1600px) {
+
   .siteLogo {
     flex-wrap: wrap;
+  }
+  .illustrationIcon {
+    display: none;
   }
 }
 @media screen and (max-width: 1275px) {
@@ -152,23 +111,7 @@
     box-sizing: border-box;
   }
 }
-@media screen and (max-width: 900px) {
-  .findAJob {
-    font-size: var(--font-size-26xl);
-    line-height: 51px;
-  }
-  .search {
-    flex-wrap: wrap;
-  }
-  .container {
-    gap: var(--gap-13xl);
-  }
-  .siteLogo {
-    gap: var(--gap-130xl);
-    padding: var(--padding-46xl) var(--padding-56xl);
-    box-sizing: border-box;
-  }
-}
+
 @media screen and (max-width: 450px) {
   .findAJob {
     font-size: var(--font-size-15xl);
